# ranklogger/handlers/records.go
@@ -5,8 +5,10 @@ import (
 	"encoding/json"
 	"fmt"
 	"html"
+	"slices"
 	"strconv"
 	"strings"
+	"time"
 
 	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
@@ -22,25 +24,38 @@ var validate = validator.New()
 func PostRecord(db *sql.DB, cfg *config.Config) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		// JSONの解析
-		var input models.GameRecordInput
+		var input models.GameRecordRequest
 		if err := c.BodyParser(&input); err != nil {
 			return c.Status(400).JSON(fiber.Map{"error": "Invalid JSON"})
 		}
-		// 基本構造のバリデーション (Fiberガイドの手法)
+
+		// play_countタグのバリデーション追加
+		validate.RegisterValidation("play_count", func(fl validator.FieldLevel) bool {
+			return !cfg.Server.EnablePlayCount || fl.Field().Int() >= 1
+		})
+
+		// modelsのstructで設定したタグに応じたバリデーションを実施
 		if err := validate.Struct(input); err != nil {
 			return c.Status(400).JSON(fiber.Map{"error": err.Error()})
 		}
 
+		tag := c.Params("Tag")
 		// 動的スキーマチェック (config.yamlとの照合)
+		renamedData := make(map[string]interface{})
 		for _, field := range cfg.Schema {
+			// タグが設定されていてかつ異なったら無視
+			if field.Tag != "" && field.Tag != tag {
+				continue
+			}
+
 			val, exists := input.Data[field.Name]
 			if !exists {
 				return c.Status(400).JSON(fiber.Map{"error": fmt.Sprintf("Missing required field: %s", field.Name)})
 			}
 
 			// 型の簡易チェック (例: INTEGERならfloat64としてパースされるので数値チェック)
-			switch field.Type {
-			case "INTEGER", "FLOAT":
+			switch true {
+			case slices.Contains(cfg.TypeValidation.Numbers, field.Type):
 				num, ok := val.(float64) // JSONの数値はGoではfloat64としてパースされる
 				if !ok {
 					return c.Status(400).JSON(fiber.Map{"error": fmt.Sprintf("%s must be a number", field.Name)})
@@ -54,7 +69,7 @@ func PostRecord(db *sql.DB, cfg *config.Config) fiber.Handler {
 					return c.Status(400).JSON(fiber.Map{"error": fmt.Sprintf("%s must be <= %d", field.Name, *field.Max)})
 				}
 
-			case "TEXT":
+			case slices.Contains(cfg.TypeValidation.Strings, field.Type):
 				str, ok := val.(string)
 				if !ok {
 					return c.Status(400).JSON(fiber.Map{"error": fmt.Sprintf("%s must be a string", field.Name)})
@@ -71,32 +86,46 @@ func PostRecord(db *sql.DB, cfg *config.Config) fiber.Handler {
 				// --- XSS対策: HTMLエスケープ ---
 				input.Data[field.Name] = html.EscapeString(str)
 			}
+			// タグ付きフィールドの名前変更
+			if field.Tag != "" {
+				renamedData[field.Tag+"_"+field.Name] = input.Data[field.Name]
+			} else {
+				renamedData[field.Name] = input.Data[field.Name]
+			}
 		}
 
 		// dataフィールド（map）を文字列（JSON）に変換してDBに保存できるようにする
-		jsonData, _ := json.Marshal(input.Data)
+		jsonData, _ := json.Marshal(renamedData)
 
+		// play_countの有効無効の設定に応じた動的な変更
+		inputId := []interface{}{input.UUID}
+		playCountAddText := [3]string{}
+		if cfg.Server.EnablePlayCount {
+			inputId = append(inputId, input.PlayCount)
+			playCountAddText[0] = ", play_count"
+			playCountAddText[1] = ", ?"
+			playCountAddText[2] = ", play_count"
+		}
 		// SQLiteの UPSERT (INSERT ... ON CONFLICT)
-		// uuid と play_count の組み合わせが重複していたら data を更新する
-		query := `
-			INSERT INTO sessions (uuid, play_count, data, ip_address)
-			VALUES (?, ?, jsonb(?), ?)
-			ON CONFLICT(uuid, play_count) DO UPDATE SET
-				data = jsonb(excluded.data),
-				created_at = CURRENT_TIMESTAMP;
-		`
+		query := fmt.Sprintf(`
+			INSERT INTO sessions (uuid%s, data, ip_address)
+			VALUES (?%s, jsonb(?), ?)
+			ON CONFLICT(uuid%s) DO UPDATE SET
+				data = jsonb_patch(data, excluded.data),
+				created_at = CURRENT_TIMESTAMP
+			RETURNING id
+		`, playCountAddText[0], playCountAddText[1], playCountAddText[2])
 
-		result, err := db.Exec(query, input.UUID, input.PlayCount, string(jsonData), middleware.GetTrustedIP(c, cfg))
+		var sessionId int64
+		err := db.QueryRow(query, append(inputId, string(jsonData), middleware.GetTrustedIP(c, cfg))...).Scan(&sessionId)
+
 		if err != nil {
 			return c.Status(500).JSON(fiber.Map{"error": "Record insert failed"})
 		}
 
-		// 挿入された行のIDを取得
-		lastId, _ := result.LastInsertId()
-
 		return c.Status(201).JSON(fiber.Map{
 			"message":    "Record registered successfully",
-			"session_id": lastId,
+			"session_id": sessionId,
 		})
 	}
 }
@@ -144,15 +173,24 @@ func DisableRecord(db *sql.DB) fiber.Handler {
 func GetRecords(db *sql.DB, cfg *config.Config, detail bool) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		// ランキング有効チェック
-		if len(cfg.SortableColumns) == 0 {
+		if len(cfg.Schema) == 0 {
 			return c.JSON(fiber.Map{
 				"message": "Ranking is disabled",
 				"data":    []interface{}{},
 			})
 		}
+		tag := c.Params("Tag")
+		if tag == "" {
+			tag = "global"
+		} else if len(cfg.SortableColumns[tag]) == 0 {
+			return c.JSON(fiber.Map{
+				"message": "This tag's ranking is disabled",
+				"data":    []interface{}{},
+			})
+		}
 
 		// sort_by の取得と検証
-		sortBy := c.Query("sort_by", cfg.SortableColumns[0].Name)
+		sortBy := c.Query("sort_by", cfg.SortableColumns[tag][0].Name)
 
 		var currentSort config.SortOption
 		var sortKey []config.SortOption
@@ -166,11 +204,31 @@ func GetRecords(db *sql.DB, cfg *config.Config, detail bool) fiber.Handler {
 		}
 
 		found := false
-		for _, opt := range cfg.SortableColumns {
-			if opt.Name == sortBy {
-				currentSort = opt
-				found = true
-				break
+		if tag == "global" {
+			for _, opt := range cfg.SortableColumns[tag] {
+				if opt.Name == sortBy {
+					currentSort = opt
+					found = true
+					break
+				}
+			}
+		} else {
+			// タグ指定があった場合は、そのタグ特有のソートキーを優先する
+			for _, opt := range cfg.SortableColumns["none"] {
+				if opt.Name == sortBy {
+					currentSort = opt
+					found = true
+					break
+				}
+			}
+			for _, opt := range cfg.SortableColumns[tag] {
+				if opt.Name == sortBy {
+					currentSort = opt
+					found = true
+					// タグ特有のソートキーの場合、DB上の名称に変換
+					sortBy = tag + "_" + sortBy
+					break
+				}
 			}
 		}
 
@@ -178,19 +236,57 @@ func GetRecords(db *sql.DB, cfg *config.Config, detail bool) fiber.Handler {
 			return c.Status(400).JSON(fiber.Map{"error": "Invalid sort key"})
 		}
 
-		// 設定ファイルの record_schema にある全ての項目を抽出対象にする
 		var selectColumns []string
 		var where string
 		// 管理者向けの/records/detailなら詳細情報を表示
 		if detail {
-			selectColumns = []string{"id", "uuid", "play_count", "ip_address", "disable", "created_at"}
+			selectColumns = []string{"id", "uuid", "ip_address", "disable", "created_at"}
+			if cfg.Server.EnablePlayCount {
+				selectColumns = append(selectColumns, "play_count")
+			}
 		} else {
 			where = "WHERE disable = FALSE"
 		}
 
-		for _, field := range cfg.Schema {
-			col := fmt.Sprintf("(data ->> '$.%s') AS %s", field.Name, field.Name)
-			selectColumns = append(selectColumns, col)
+		sinceStr := c.Query("since")
+		var args []interface{}
+
+		// 期間絞り込みロジック
+		if sinceStr != "" {
+			// 文字列を time.Time に変換
+			sinceTime, err := time.Parse(time.RFC3339, sinceStr)
+			if err != nil {
+				return c.Status(400).JSON(fiber.Map{"error": "invalid since format (use RFC3339)"})
+			}
+			if where == "" {
+				where = "WHERE created_at >= ?"
+			} else {
+				where += " AND created_at >= ?"
+			}
+			args = append(args, sinceTime)
+		}
+
+		if tag == "global" {
+			for _, field := range cfg.Schema {
+				// タグ指定なしの場合、global := タグ無し + IsGlobalフラグ付きの列を取得
+				if field.Tag != "" && !field.IsGlobal {
+					continue
+				}
+				col := fmt.Sprintf("(data ->> '$.%s') AS %s", field.Name, field.Name)
+				selectColumns = append(selectColumns, col)
+			}
+		} else {
+			for _, field := range cfg.Schema {
+				// タグ指定有りの場合、タグ無しとタグ一致の列を取得
+				switch field.Tag {
+				case "":
+					col := fmt.Sprintf("(data ->> '$.%s') AS %s", field.Name, field.Name)
+					selectColumns = append(selectColumns, col)
+				case tag:
+					col := fmt.Sprintf("(data ->> '$.%s') AS %s", tag+"_"+field.Name, field.Name)
+					selectColumns = append(selectColumns, col)
+				}
+			}
 		}
 
 		isReverse, _ := strconv.ParseBool(c.Query("is_reverse"))
@@ -233,10 +329,10 @@ func GetRecords(db *sql.DB, cfg *config.Config, detail bool) fiber.Handler {
 		// クエリの組み立て
 		query := fmt.Sprintf(
 			"SELECT %s FROM sessions %s ORDER BY %s %s NULLS LAST LIMIT %d OFFSET %d",
-			selection, where, currentSort.Name, finalOrder, limit, offset,
+			selection, where, sortBy, finalOrder, limit, offset,
 		)
 
-		rows, err := db.Query(query)
+		rows, err := db.Query(query, args...)
 		if err != nil {
 			return c.Status(500).JSON(fiber.Map{"error": err.Error()})
 		}
@@ -267,9 +363,14 @@ func GetRecords(db *sql.DB, cfg *config.Config, detail bool) fiber.Handler {
 			results = append(results, rowData)
 		}
 
+		var sortOptions []config.SortOption
+		if tag != "global" {
+			sortOptions = cfg.SortableColumns["none"]
+		}
+		sortOptions = append(sortOptions, cfg.SortableColumns[tag]...)
 		// レスポンスにメタデータを含める
 		return c.JSON(fiber.Map{
-			"meta": cfg.SortableColumns, // UI側はこの配列を見てタブやボタンを作れる
+			"meta": sortOptions, // UI側はこの配列を見てタブやボタンを作れる
 			"data": results,
 		})
 	}
@@ -278,18 +379,56 @@ func GetRecords(db *sql.DB, cfg *config.Config, detail bool) fiber.Handler {
 func GetRanks(db *sql.DB, cfg *config.Config) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		sessionId := c.Params("SessionId")
-		sortBy := c.Query("sort_by", cfg.SortableColumns[0].Name)
+		// ランキング有効チェック
+		if len(cfg.Schema) == 0 {
+			return c.JSON(fiber.Map{
+				"message": "Ranking is disabled",
+				"data":    []interface{}{},
+			})
+		}
+		tag := c.Params("Tag")
+		if tag == "" {
+			tag = "global"
+		} else if len(cfg.SortableColumns[tag]) == 0 {
+			return c.JSON(fiber.Map{
+				"message": "This tag's ranking is disabled",
+				"data":    []interface{}{},
+			})
+		}
+
+		sortBy := c.Query("sort_by", cfg.SortableColumns[tag][0].Name)
 
 		// 1. ソート対象のバリデーション
 		var currentSort config.SortOption
 		found := false
-		for _, opt := range cfg.SortableColumns {
-			if opt.Name == sortBy {
-				currentSort = opt
-				found = true
-				break
+		if tag == "global" {
+			for _, opt := range cfg.SortableColumns[tag] {
+				if opt.Name == sortBy {
+					currentSort = opt
+					found = true
+					break
+				}
+			}
+		} else {
+			// タグ指定があった場合は、そのタグ特有のソートキーを優先する
+			for _, opt := range cfg.SortableColumns["none"] {
+				if opt.Name == sortBy {
+					currentSort = opt
+					found = true
+					break
+				}
+			}
+			for _, opt := range cfg.SortableColumns[tag] {
+				if opt.Name == sortBy {
+					currentSort = opt
+					found = true
+					// タグ特有のソートキーの場合、DB上の名称に変換
+					sortBy = tag + "_" + sortBy
+					break
+				}
 			}
 		}
+
 		if !found {
 			return c.Status(400).JSON(fiber.Map{"error": "Invalid sort key"})
 		}
@@ -305,7 +444,7 @@ func GetRanks(db *sql.DB, cfg *config.Config) fiber.Handler {
 				WHERE disable = FALSE
 			)
 			SELECT current_rank FROM ranked_sessions WHERE id = ?`,
-			currentSort.Name, currentSort.Order,
+			sortBy, currentSort.Order,
 		)
 
 		var rank int
